demos/zero-downtime-k8s-deploymets/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-graceful-shutdown-demo
spec:
  type: "ClusterIP"
  ports:
  - name: "http-port"
    port: 80
    targetPort: "http-port"
  selector:
    app: k8s-graceful-shutdown-demo
