demos/zero-downtime-k8s-deploymets/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: k8s-graceful-shutdown-demo
spec:
  rules:
      - host: <yourhost>
        http:
          paths:
            - backend:
                serviceName: k8s-graceful-shutdown-demo
                servicePort: http-port
              path: /
